# labtools

./: ..gitignore.swp  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Development.ipynb  LICENSE  README.md  index.html  pyproject.toml
docs/: FACS_Analysis_Explanation.ipynb  Makefile  conf.py  contributing.html  example.ipynb  index.md.save  make.bat  requirements.txt
docs/_build/doctrees/: FACS_Analysis_Explanation.doctree  changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/html/: .buildinfo  FACS_Analysis_Explanation.html  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/jupyter_execute/: FACS_Analysis_Explanation.ipynb  example.ipynb
docs/docs/doctrees/: changelog.doctree  conduct.doctree  index.doctree
docs/docs/html/: index.html  search.html
docs/docs/jupyter_execute/: example.ipynb
doctrees/: changelog.doctree  conduct.doctree  environment.pickle
doctrees/autoapi/: index.doctree
exampledata/: bin1.fastq  bin2.fastq  bin3.fastq  bin4.fastq  mini.fastq  unique_seqs.csv
html/: searchindex.js
html/_modules/labtools/: shuffle.html
jupyter_execute/: example.ipynb
labtools/: README.md
labtools/docs/: Makefile  example.ipynb
src/labtools/: __init__.py  shuffle.py
src/labtools/adtools/: counter.py  finder.py  pair_counter.py  seqlib.py  sort.py
tests/: test_labtools.py
(+108 files in other folders)
