[tool.poetry]
name = "labtools"
version = "0.1.9"
description = "Staller lab tools for sequence design and analysis"
authors = ["Jordan Stefani"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
more-itertools = "^9.0.0"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
pandas = "2.2.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
myst-nb = "^0.17.1"
sphinx-autoapi = "^2.0.1"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0", "oldest-supported-numpy"]
build-backend = "poetry.core.masonry.api"
